Dec 15 2005  devel  Added remote drone name to messages passed from it
                    Fixed drone stream syncing problem which caused sentinel
                     errors
                    Fixed compilation error when libpcap disabled
Dec 14 2005  devel  Fixed queuing of dumpfiles when dumping is disabled
Dec 13 2005  devel  Fixed loading of servername in server/drone
                    Restored wrt54prism capture source for OpenWRT
                    Fixed packet processing loop in packetsource_drone
Dec 12 2005  devel  Revamped AddSource callback API into a generic SourceAction
                     API
                    Wrote drone interface channel push code
                    Added SourceAction hooks for setting hop, vectors
                    Added drone server-side handling of channelset for hopping
                     and vector
                    Changed internal channel representation to unsigned int
                    Added packet sending to drone client
                    Added channelset packet generation to drone client
                    Added proper bitmap handling of channelset frames in
                     drone server
                    Added channel sequence command (CHANSEQ)
                    Fixed card commands (hop, etc) from segfaulting
                    Fixed dumpfiles unregistering callbacks during destruction
                    Fixed more blatant errors in uuid
                    Fixed stupid errors in drone server handling
Dec 11 2005  devel  Added fix to ringbuf from Shane Schisler
                    Added drone_source_packet generators to drone protocol to
                     push a capture source upstream
                    Added endian-flipping to bitmap fields in drone protocol
                    Completed server side of drone interface push system
                    Fixed UUID '<' operator
                    Added remote source pushing via drone protocol, remote sources