@@ -1,3 +1,4 @@
+Dec 16 2005  devel  Fixed vector resize with uclibc++
 Dec 15 2005  devel  Added remote drone name to messages passed from it
                     Fixed drone stream syncing problem which caused sentinel
                      errors
